# memory-mcp-server

./: .env.example  .gitignore  CLEANUP_SUMMARY.md  DEPLOYMENT.md  Dockerfile  INSTALL.md  LICENSE  Makefile  PRODUCTION_CHECKLIST.md  README.md  config.yml  cross_tool_memory_mcp.py  docker-compose.yml  mcp-config-examples.json  nginx.conf  pyproject.toml  setup-dev.sh  start_production_server.sh
cortex-mcp-client/: DEPLOYMENT.md  MANIFEST.in  README.md  __init__.py  build.sh  client.py  main.py  pyproject.toml
cortex-mcp-server/: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  INSTALL.md  Makefile  PERFORMANCE.md  README.md  __init__.py  build.py  config.yml  cortex_mcp_server.py  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements-build.txt  start_server.py
cortex-mcp-server/client/: __init__.py  remote_client.py
cortex-mcp-server/config/: __init__.py  cli.py  config_manager.py  database.py  model_manager.py  security_config.py
cortex-mcp-server/docs/: INTELLIGENT_STORAGE_CONFIG.md  REST_API.md  SECURITY.md
cortex-mcp-server/repositories/: __init__.py  conversation_repository.py  preferences_repository.py  project_repository.py
cortex-mcp-server/scripts/: backup_restore.py  data_management.py  install.ps1  maintenance.py  manage_api_keys.py  setup_mcp_host.py  start_rest_api.py  uninstall.sh  validate_mcp_config.py
cortex-mcp-server/security/: __init__.py  access_control.py  rate_limiting.py  tls_config.py
cortex-mcp-server/server/: __init__.py  landing_page.py  mcp_server.py  mcp_server_simple.py  monitoring_api.py  rest_api.py  web_interface.py
cortex-mcp-server/services/: __init__.py  api_key_service.py  context_manager.py  conversation_processor.py  data_export_import.py  duplicate_detector.py  embedding_service.py  encryption_service.py  intelligent_storage_config.py  learning_engine.py  search_engine.py  session_analyzer.py  storage_analyzer.py  vector_store.py
cortex-mcp-server/static/: sw.js
cortex-mcp-server/static/css/: styles.css
cortex-mcp-server/static/js/: api.js  app.js  simple-app.js  ui.js  utils.js
cortex-mcp-server/tests/: INTELLIGENT_STORAGE_TESTS.md  __init__.py  run_comprehensive_tests.py  run_intelligent_storage_tests.py
cortex-mcp-server/utils/: database_init.py  database_integrity.py  error_handling.py  health_checks.py  intelligent_storage_cli.py  log_analyzer.py  logging_config.py  maintenance_cli.py  performance_monitor.py  storage_monitor.py
docs/: SECURITY.md
examples/: config_management_demo.py  error_handling_demo.py  rest_api_client.py  security_demo.py  semantic_search_demo.py
scripts/: data_management.py  install.ps1  install.sh  maintenance.py  start_rest_api.py
src/cross_tool_memory/: __init__.py  main.py
src/cross_tool_memory/config/: __init__.py  cli.py  config_manager.py  database.py  model_manager.py  security_config.py
src/cross_tool_memory/repositories/: __init__.py  conversation_repository.py  preferences_repository.py  project_repository.py
src/cross_tool_memory/security/: __init__.py  tls_config.py
src/cross_tool_memory/server/: __init__.py  landing_page.py  mcp_server.py  mcp_server_simple.py  monitoring_api.py  rest_api.py  web_interface.py
src/cross_tool_memory/services/: __init__.py  context_manager.py  conversation_processor.py  data_export_import.py  embedding_service.py  learning_engine.py  search_engine.py  tagging_service.py
src/cross_tool_memory/utils/: database_init.py  database_integrity.py  error_handling.py  health_checks.py  log_analyzer.py  logging_config.py  maintenance_cli.py  performance_monitor.py  storage_monitor.py
tests/: conftest.py  validate_test_suite.py
